<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".ui.requestPermissions.RequestLocationPermissionBottomDialog">

    <ScrollView
        android:id="@+id/fragment_request_location_dialog_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_request_location_dialog_title"
                style="@style/BottomDialogTitle"
                android:text="@string/fragment_request_location_dialog_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fragment_request_location_dialog_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:text="@string/fragment_request_location_dialog_text"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_request_location_dialog_title" />

            <Button
                android:id="@+id/fragment_request_location_dialog_button"
                style="@style/ButtonsConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/fragment_request_location_dialog_button"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_request_location_dialog_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>