<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventItem"
            type="com.joaquim.joaquim_teste.data.model.event.LocalObjectBoxDbEventDetailsItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_home_event_item_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginBottom="10dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_home_event_item_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_goneMarginEnd="15dp">

                <ImageView
                    android:id="@+id/card_home_img_event"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/card_home_event_item_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:maxWidth="200dp"
                    android:maxLines="2"
                    android:text="@{eventItem.eventDetailTitle}"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/general_title_dimen"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/card_home_img_event"
                    tools:text="@string/general_text_place_holder_title" />


                <TextView
                    android:id="@+id/card_home_event_item_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:maxWidth="304dp"
                    android:maxLines="2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/card_home_event_detail_normal_dimen"
                    app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
                    app:getEventDate="@{eventItem.eventDetailDate}"
                    app:layout_constraintStart_toStartOf="@+id/card_home_event_item_title"
                    app:layout_constraintTop_toBottomOf="@+id/card_home_event_item_title"
                    tools:text="@string/general_text_place_holder_text" />


                <TextView
                    android:id="@+id/card_home_event_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:drawablePadding="10dp"
                    android:ellipsize="end"
                    android:maxWidth="304dp"
                    android:maxLines="2"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textAlignment="textStart"
                    android:textSize="@dimen/card_home_event_detail_normal_dimen"
                    app:drawableStartCompat="@drawable/ic_baseline_monetization_on_24"
                    app:getEventPrice="@{eventItem.eventDetailPrice}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/card_home_event_item_date"
                    app:layout_constraintTop_toBottomOf="@+id/card_home_event_item_date"
                    tools:text="@string/general_text_place_holder_price_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
